--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,20 @@ h1.hide {
 #toast > span#dismiss {
   cursor: pointer;
 }
+
+#alert {
+  display: none;
+  margin: 0 auto;
+  max-width: 300px;
+  padding: 1em;
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  left: 0;
+  right: 0;
+  z-index: 2000;
+}
+
+#alert.show {
+  display: inline;
+}
